Solve wrong font-size

--- a/style/style.css
+++ b/style/style.css
@@ -329,7 +329,7 @@ code {
 }
 
 pre code {
-  font-size: 1m;
+  font-size: 1em;
 }
 
 dl {
